# NanoDiloco

./: README.md  pyproject.toml
configs/: llama_default.json  wandb_default.json
nanodiloco/: __init__.py  main.py
nanodiloco/diloco/: __init__.py  diloco.py
nanodiloco/training_utils/: __init__.py  utils.py
scripts/: setup_data_volume.py  train_modal.py
